--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8">
-	<title>NoPixel Territory Map</title>
+	<title>Mapa de Território NoPixel Brasil</title>
 	<link rel="icon" href="icons/favicon.ico"/>
 
 	<link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
@@ -23,15 +23,13 @@
 </head>
 <body>
 	<header>
-		<p class="left" style="padding-top: 5px;"><a href="">NoPixel Territory Map</a></p>
+		<p class="left" style="padding-top: 5px;"><a href="">Mapa de Território NoPixel Brasil</a></p>
 		<ul class="right">
 			<div class="dropdown">
-				<a href="https://github.com/skyrossm/np-gangmap/graphs/contributors" target="_blank"><button class="btn btn-primary">Contributors</button></a>
-				<button class="btn btn-primary" id="toggleruler" onclick="toggleRuler();$(this).css('display', 'none');">Add Distance Ruler</button>
-				<button class="btn btn-primary" id="createzone" onclick="printArray()">Add New Region</button>
-				<button class="btn btn-secondary dropdown-toggle" type="button" id="ddmenu" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-					Select Map Type
-				</button>
+				<a href="https://github.com/cauedev/npbr-map/graphs/contributors" target="_blank"><button class="btn btn-primary">Contribuidores</button></a>
+				<button class="btn btn-primary" id="toggleruler" onclick="toggleRuler();$(this).css('display', 'none');">Régua de Distância</button>
+				<button class="btn btn-primary" id="createzone" onclick="printArray()">Nova Região</button>
+				<button class="btn btn-secondary dropdown-toggle" type="button" id="ddmenu" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Tipo de Mapa</button>
 				<div class="dropdown-menu" aria-labelledby="ddmenu">
 					<a href="#" id="Atlas"           class="dropdown-item active" onclick="$('#' + map.getMapTypeId()).removeClass('active'); map.setMapTypeId('Atlas');           $(this).addClass('active');">Atlas</a>
 					<a href="#" id="Satellite"       class="dropdown-item"        onclick="$('#' + map.getMapTypeId()).removeClass('active'); map.setMapTypeId('Satellite');       $(this).addClass('active');">Satellite</a>
@@ -52,7 +50,7 @@
 					{{#each types}}
 						<li><label><input type="checkbox" {{#if enabled}}checked{{/if}} value="{{name}}"> <img src="icons/{{icon}}"> {{name}}</label> <a href="#" class="details" data-name="{{name}}"><i class="icon-chevron-sign-right"></i></a></li>
 					{{/each}}
-					<li><label><input type="checkbox" {{#if enabled}}checked{{/if}} value="labels"> <img src="icons/General/wall-breach.png"> Labels</label> <a href="#" class="details" data-name="Labels"></a></li>
+					<li><label><input type="checkbox" {{#if enabled}}checked{{/if}} value="labels"> <img src="icons/General/wall-breach.png"> Rótulos</label> <a href="#" class="details" data-name="Labels"></a></li>
 
 				</ul>
 			</section>
@@ -110,7 +108,7 @@
 				 	{{/each}}
 					{{#if wiki_link}}
 						<hr>
-						<a target="_blank" href="{{wiki_link}}">See {{title}} on the NoPixel Wiki</a>
+						<a target="_blank" href="{{wiki_link}}">Veja sobre {{title}} na Wiki do NoPixel Brasil</a>
 					{{/if}}
 				</div>
 			</div>
