--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8">
-	<title>Mapa de Território NoPixel Brasil</title>
+	<title>PPRP Info Map</title>
 	<link rel="icon" href="icons/favicon.ico"/>
 
 	<link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
@@ -23,12 +23,10 @@
 </head>
 <body>
 	<header>
-		<p class="left" style="padding-top: 5px;"><a href="">Mapa de Território NoPixel Brasil</a></p>
+		<p class="left" style="padding-top: 5px;"><a href="">PPRP Info Map</a></p>
 		<ul class="right">
 			<div class="dropdown">
-				<a href="https://github.com/cauedev/npbr-map/graphs/contributors" target="_blank"><button class="btn btn-primary">Contribuidores</button></a>
-				<button class="btn btn-primary" id="toggleruler" onclick="toggleRuler();$(this).css('display', 'none');">Régua de Distância</button>
-				<button class="btn btn-primary" id="createzone" onclick="printArray()">Nova Região</button>
+				<button class="btn btn-primary" id="toggleruler" onclick="toggleRuler();$(this).css('display', 'none');">Toggle Ruler</button>
 				<button class="btn btn-secondary dropdown-toggle" type="button" id="ddmenu" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Tipo de Mapa</button>
 				<div class="dropdown-menu" aria-labelledby="ddmenu">
 					<a href="#" id="Atlas"           class="dropdown-item active" onclick="$('#' + map.getMapTypeId()).removeClass('active'); map.setMapTypeId('Atlas');           $(this).addClass('active');">Atlas</a>
