--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 	<script src="js/libs/underscore-min.js"></script>
 	<script src="js/libs/backbone-min.js"></script>
 	<script src="js/libs/handlebars.js"></script>
-	<script src="//maps.googleapis.com/maps/api/js?v=3.exp&key="></script>
+	<script src="https://maps.googleapis.com/maps/api/js?v=3.exp&key="></script>
 	<script src="js/libs/maplabel-compiled.js"></script>
 	<script src="js/app.js"></script>
 
