Icon Removed and categories

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<title>PPRP Info Map</title>
-	<link rel="icon" href="icons/favicon.ico"/>
+	<!-- <link rel="icon" href="icons/favicon.ico"/> -->
 
 	<link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 	<link rel="stylesheet" href="fontawesome/css/font-awesome.css">
@@ -40,7 +40,7 @@
 
 	<div id="map" style="background:rgb(43, 164, 210);"></div>
 
-	<script type="x/template" id="categoriesTemplate">
+	<!-- <script type="x/template" id="categoriesTemplate">
 		{{#each categories}}
 			<section class="type">
 				<h3>{{name}}</h3>
@@ -64,7 +64,7 @@
 				{{/each}}
 			</ul>
 		</section>
-	</script>
+	</script> -->
 
 	<script type="x/template" id="markerPopupTemplate2">
 		<div id="info-window" style="max-width:420px;">
