--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<title>PPRP Info Map</title>
-	<link rel="icon" href="icons/favicon.ico"/>
+	<!-- <link rel="icon" href="icons/favicon.ico"/> -->
 
 	<link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 	<link rel="stylesheet" href="fontawesome/css/font-awesome.css">
@@ -26,6 +26,7 @@
 		<p class="left" style="padding-top: 5px;"><a href="">PPRP Info Map</a></p>
 		<ul class="right">
 			<div class="dropdown">
+				<button class="btn btn-primary" id="toggleruler" onclick="toggleRuler();$(this).css('display', 'none');">Toggle Ruler</button>
 				<button class="btn btn-secondary dropdown-toggle" type="button" id="ddmenu" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Tipo de Mapa</button>
 				<div class="dropdown-menu" aria-labelledby="ddmenu">
 					<a href="#" id="Atlas"           class="dropdown-item active" onclick="$('#' + map.getMapTypeId()).removeClass('active'); map.setMapTypeId('Atlas');           $(this).addClass('active');">Atlas</a>
@@ -39,11 +40,7 @@
 
 	<div id="map" style="background:rgb(43, 164, 210);"></div>
 
-<<<<<<< HEAD
 	 <script type="x/template" id="categoriesTemplate">
-=======
-	<script type="x/template" id="categoriesTemplate">
->>>>>>> parent of cf0f84cd (Icon Removed and categories)
 		{{#each categories}}
 			<section class="type">
 				<h3>{{name}}</h3>
@@ -67,11 +64,7 @@
 				{{/each}}
 			</ul>
 		</section>
-<<<<<<< HEAD
 	</script> 
-=======
-	</script>
->>>>>>> parent of cf0f84cd (Icon Removed and categories)
 
 	<script type="x/template" id="markerPopupTemplate2">
 		<div id="info-window" style="max-width:420px;">
