--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
 	<div id="map" style="background:rgb(43, 164, 210);"></div>
 
-	 <script type="x/template" id="categoriesTemplate">
+	<!-- <script type="x/template" id="categoriesTemplate">
 		{{#each categories}}
 			<section class="type">
 				<h3>{{name}}</h3>
@@ -64,7 +64,7 @@
 				{{/each}}
 			</ul>
 		</section>
-	</script> 
+	</script> -->
 
 	<script type="x/template" id="markerPopupTemplate2">
 		<div id="info-window" style="max-width:420px;">
